--- a/AUTHORS
+++ b/AUTHORS
@@ -2,3 +2,5 @@
 
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
+Lorrine Adefemi <https://github.com/ThatJesusBabe>
+Adeyemi Isaac <https://github.com/Hakinzy>
